<resources>
    <string name="app_name">OpenTrail</string>
    <string name="input_annotation_name">Add note..</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="gps_waiting">Waiting for GPS location..</string>
    <string name="walkroute_annotation">Add to current walk route?</string>
    <string name="selectmapsource">Select map source"</string>
    <string name="mylocation">My Location"</string>
    <string name="addannotation">Add note</string>
    <string name="settings">Settings</string>
    <string name="clearCache">Clear map tile cache now</string>
    <string name="clearPOICache">Clear POI and note cache now</string>
    <string name="uploadsavedannotations">Upload saved notes</string>
    <string name="downloadpois">Download POIs</string>
    <string name="findnearbypois">Find nearby downloaded POIs</string>
    <string name="downloadwalkroutes">Download walk routes</string>
    <string name="findwalkroutes">Find downloaded walk routes</string>
    <string name="recordwalkroute">Record walk route</string>
    <string name="uploadrecordedwalkroute">Upload recorded walk route</string>
    <string name="about">About OpenTrail</string>
    <string name="annotationTypePrompt">Please select note type</string>
    <string name="annotationType">Note type:</string>
    <string name="userguide">User guide / privacy</string>
    <string name="search">Search</string>
    <string name="drawer_open">Show menu</string>
    <string name="drawer_close">Hide menu</string>
</resources>
